src/test/resources/Fall_21_Test_Cases/Bad/LO-1/lvl1-bad-3.lo
// bad case: missing parenthesis
{
  while("Hello World") {
}